2014-02-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60047
	* method.c (implicitly_declare_fn): A constructor of a class with
	virtual base classes isn't constexpr (7.1.5p4).

2014-02-05  Jan Hubicka  <hubicka@ucw.cz

	* parser.c (synthesize_implicit_template_parm): Use grow_tree_vec.

2014-02-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/58703
	* parser.c (cp_parser_omp_declare_reduction): Save and free
	declarator_obstack.

2014-02-03  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/53017
	PR c++/59211
	* tree.c (handle_init_priority_attribute): Call default_conversion on
	the attribute argument.

2014-02-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58871
	* method.c (synthesized_method_walk): If vbases is non-null but
	is_empty is true, likewise don't worry about the virtual bases.

2014-02-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51219
	* typeck2.c (process_init_constructor_record): Just skip unnamed
	bit-fields.

2014-01-31  Jason Merrill  <jason@redhat.com>

	PR c++/59469
	* pt.c (mark_decl_instantiated): Call mark_needed.

	PR c++/58672
	* decl2.c (handle_tls_init): Handle null init fn.

	PR c++/55800
	* decl2.c (get_tls_init_fn): Copy DECL_EXTERNAL from the variable.

2014-01-31  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59082
	* class.c (build_vfield_ref): Early return error_mark_node if
	TYPE_VFIELD (type) is null.
	(build_base_path): Check return value of build_vfield_ref.

2014-01-31  Jason Merrill  <jason@redhat.com>

	PR c++/59646
	* call.c (convert_like_real) [ck_aggr]: Set TARGET_EXPR_LIST_INIT_P.
	[ck_list]: Check for error_mark_node.
	(build_aggr_conv): Set LOOKUP_NO_NARROWING and check_narrowing.

	PR c++/57043
	* pt.c (fn_type_unification): Don't do DEDUCE_EXACT check
	during partial ordering.

2014-01-31  Marek Polacek  <polacek@redhat.com>

	PR c/59963
	* typeck.c (build_function_call_vec): Add dummy arg_loc parameter.

2014-01-30  Jason Merrill  <jason@redhat.com>

	PR c++/57899